.k8s/frontend_service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend
    project: pharmaflow
spec: 
  type: ClusterIP
  selector: 
    app: frontend
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
